fixing line height and font size on mobile

--- a/src/Styling/Hero.css
+++ b/src/Styling/Hero.css
@@ -79,6 +79,7 @@
   
   .text-container p {
     font-size: 1.5rem;
+    line-height: 2rem;
     color: white;
   }
   
@@ -92,7 +93,6 @@
 
   .text-container p span{
     border-radius: 5px;
-    background-color: #da3349;
     color: white;
     padding: .3rem;
   }
@@ -275,7 +275,7 @@
       }
 
       .text-container .heading{
-        font-size: 3rem;
+        font-size: 2.5rem;
         line-height: 2.8rem;
       }
 
@@ -310,6 +310,12 @@
 
       .btn-group{
         justify-content: center;
+      }
+
+      .text-container p {
+        font-size: 1.5rem;
+        line-height: 1.75rem;
+        color: white;
       }
 }
 
